# Orbiter

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/screenshots/: README.md
patterns/: audio-bars.js  audio-gradient.js  beat-pulse.js  lightning.js  plasma.js  rainstorm.js  ring-chase.js  solid.js  starfield.js  tilt-level.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/Audio/: AudioPanel.tsx  index.ts
src/components/Calibration/: CalibrationPanel.tsx  index.ts
src/components/Controllers/: ControllersPanel.tsx  index.ts
src/components/Dome/: Dome.tsx  index.ts
src/components/Editor/: EditorPanel.tsx
src/components/Export/: ExportPanel.tsx
src/components/Motion/: MotionPanel.tsx  index.ts
src/components/Project/: ProjectPanel.tsx
src/components/Structure/: StructurePanel.tsx  index.ts
src/components/Viewer/: InspectorHUD.tsx  Viewer.tsx  WebcamOverlay.tsx
src/core/: audio.ts  calibration.ts  colorSpace.ts  fileNames.ts  inspector.ts  motion.ts  num.ts  patternApi.ts  patternRuntime.ts  project.ts  structure.ts  topology.ts
src/core/exporters/: arduinoFastled.ts  wledBaked.ts  wledPreset.ts
src/state/: store.ts
src/worker/: patternWorker.ts
