[package]
name = "orbiter"
version = "0.1.0"
description = "Orbiter — LED dome simulator and pattern authoring tool"
authors = ["you"]
edition = "2021"

[lib]
name = "orbiter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
